add explication fetch code

--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -9,6 +9,7 @@ h1 {
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: $main-bg-color-dark;
+  line-height: 1.2em;
 }
 
 h1 {
